--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <audio src="ssstik.io_1728641559981 (1).mp3" autoplay id="linkmp3" class="sembunyi"></audio>
+    <audio src="ssstik.io_1728641559981 (1).mp3" autoplay loop id="linkmp3" class="sembunyi"></audio>
 	<div class="overlay">
     <div class="loading-message">Hai kak!<br>Tunggu dulu ya..</div>
      <div id="loveIn" class="blocklove">
@@ -89,11 +89,11 @@
     <!-- Slide 7 -->
 
     <!-- Slide 8 -->
-    <!-- <div class="swiper-slide">
+    <div class="swiper-slide">
         <div id="stiker8" class="scale0 stiker"><img src="https://feeldreams.github.io/pandaberi.gif"/></div>
         <h1 id="teks8" class="scale0 itim" style="font-size: 18px;">Apa yang kamu suka dari aku? 🤔<br><br>
         <input type="text" id="iteks8" name="iteks8" placeholder="..."></h1>
-    </div> -->
+    </div>
     <!-- Slide 8 -->
 
     <!-- Slide 9 -->
